Fixing breadcrumbs size and spacing.

--- a/themes/drhayes/source/css/_page.less
+++ b/themes/drhayes/source/css/_page.less
@@ -9,13 +9,9 @@
 }
 
 .page-header {
-  h1 {
-    margin-top: 1em;
-  }
-
   time {
     color: rgba(0, 0, 0, 0.5);
-    font-size: 90%;
+    font-size: 80%;
   }
 }
 
