--- a/themes/drhayes/source/css/style.less
+++ b/themes/drhayes/source/css/style.less
@@ -101,6 +101,8 @@ a[href*=tumblr] {
 }
 
 .breadcrumbs {
+  margin-bottom: 1em;
+  font-size: 80%;
   color: rgba(0, 0, 0, 0.5);
 
   li {
